# tui-rsx

./: .gitignore  Cargo.toml  README.md
crates/tui-rsx/: Cargo.toml  test.rs
crates/tui-rsx-macros/: Cargo.toml
crates/tui-rsx-macros/src/: component.rs  lib.rs  view.rs
crates/tui-rsx/examples/: example.rs  popup.rs  table_fancy.rs
crates/tui-rsx/src/: components.rs  lib.rs
crates/tui-rsx/tests/: test_ui.rs
